Fix widget alignment (whitespace causing space between widgets)

--- a/src/sass/layout/_full-width.scss
+++ b/src/sass/layout/_full-width.scss
@@ -7,6 +7,7 @@
 /* Widgets layout */
 
 .widget-area .widget {
+	float: left;
 	display: inline-block;
 	vertical-align: top;
 	width: 1/3 * 100%;
